# stout

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  specs.md
.github/workflows/: ci.yml  release.yml  sync-index.yml
completions/: _brewx  _stout  brewx.bash  brewx.fish  stout.bash  stout.fish
crates/brewx-audit/: Cargo.toml
crates/brewx-audit/src/: database.rs  error.rs  lib.rs  report.rs
crates/brewx-bundle/: Cargo.toml
crates/brewx-bundle/src/: error.rs  lib.rs  snapshot.rs
crates/brewx-cask/: Cargo.toml
crates/brewx-cask/src/: download.rs  error.rs  install.rs  lib.rs  linux.rs  macos.rs  state.rs
crates/brewx-fetch/: Cargo.toml
crates/brewx-fetch/src/: cache.rs  client.rs  error.rs  lib.rs  tests.rs
crates/brewx-index/: Cargo.toml
crates/brewx-index/src/: cask.rs  db.rs  delta.rs  error.rs  formula.rs  lib.rs  query.rs  schema.rs  signature.rs  sync.rs  tests.rs
crates/brewx-install/: Cargo.toml
crates/brewx-install/src/: error.rs  extract.rs  lib.rs  parallel.rs  receipt.rs  tests.rs
crates/brewx-mirror/: Cargo.toml
crates/brewx-mirror/src/: client.rs  create.rs  error.rs  lib.rs  manifest.rs
crates/brewx-resolve/: Cargo.toml
crates/brewx-resolve/src/: error.rs  graph.rs  lib.rs  plan.rs  tests.rs
crates/brewx-state/: Cargo.toml
crates/brewx-state/src/: config.rs  error.rs  installed.rs  lib.rs  lockfile.rs  paths.rs  tap.rs  tests.rs
crates/stout-audit/: Cargo.toml  README.md
crates/stout-audit/src/: database.rs  error.rs  lib.rs  report.rs  version.rs
crates/stout-bundle/: Cargo.toml  README.md
crates/stout-bundle/src/: error.rs  lib.rs  parser.rs  snapshot.rs
crates/stout-cask/: Cargo.toml  README.md
crates/stout-cask/src/: download.rs  error.rs  install.rs  lib.rs  linux.rs  macos.rs  state.rs
crates/stout-fetch/: Cargo.toml  README.md
crates/stout-fetch/src/: cache.rs  client.rs  error.rs  lib.rs  progress.rs  tests.rs  verify.rs
crates/stout-index/: Cargo.toml  README.md
crates/stout-index/src/: cask.rs  db.rs  delta.rs  error.rs  formula.rs  lib.rs  ruby_formula.rs  schema.rs  signature.rs  sync.rs  tests.rs
crates/stout-install/: Cargo.toml  README.md
crates/stout-install/src/: bottle.rs  build.rs  cask_scan.rs  cellar.rs  error.rs  extract.rs  lib.rs  link.rs  parallel.rs  receipt.rs  tests.rs
crates/stout-mirror/: Cargo.toml  README.md
crates/stout-mirror/src/: client.rs  create.rs  error.rs  lib.rs  manifest.rs  serve.rs
crates/stout-resolve/: Cargo.toml  README.md
crates/stout-resolve/src/: error.rs  graph.rs  lib.rs  plan.rs  tests.rs
crates/stout-state/: Cargo.toml  README.md
crates/stout-state/src/: config.rs  error.rs  history.rs  installed.rs  lib.rs  lockfile.rs  paths.rs  tap.rs  tests.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ENTERPRISE.md  INSTALL.md  PACKAGING.md  ROADMAP.md  SECURITY.md  SPEC.md  USAGE.md
documentation/: mkdocs.yml
documentation/docs/: casks.md  commands.md  configuration.md  enterprise.md  faq.md  getting-started.md  index.md  mirroring.md  quickstart.md  security.md  troubleshooting.md
packaging/: README.md
packaging/aur/: PKGBUILD  PKGBUILD-bin  README.md
packaging/deb/: README.md
packaging/gem/: README.md  stout-pkg-0.2.0.gem  stout-pkg.gemspec
packaging/gem/exe/: stout
packaging/gem/lib/: stout_pkg.rb
packaging/gem/lib/stout_pkg/: installer.rb  version.rb
packaging/homebrew/: README.md  brewx.rb  stout.rb  update-formula.sh
packaging/nix/: README.md  default.nix  flake.nix
packaging/npm/: README.md  package.json
packaging/npm/scripts/: install.js  uninstall.js
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/src/stout_pkg/: __init__.py
packaging/rpm/: README.md
scripts/: generate-completions.sh  install-man.sh  publish.sh  pyproject.toml  release.sh  requirements.txt
src/: main.rs  output.rs
src/cli/: analytics.rs  audit.rs  autoremove.rs  bottle.rs  bundle.rs  cask.rs  cleanup.rs  completions.rs  config.rs  create.rs  deps.rs  doctor.rs  first_run.rs  history.rs  home.rs  import.rs  info.rs  install.rs  link.rs  list.rs  lock.rs  mirror.rs  mod.rs  outdated.rs  pin.rs  prefix.rs  reinstall.rs  rollback.rs  search.rs  services.rs  snapshot.rs  switch.rs  sync.rs  tap.rs  test.rs  uninstall.rs  unlink.rs  unpin.rs  update.rs  upgrade.rs  (+2 more)
