[package]
name = "brewx-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vulnerability auditing for brewx packages"

[dependencies]
brewx-index.workspace = true
brewx-state.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tokio.workspace = true
zstd.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
