[package]
name = "brewx-install"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Package installation for brewx"

[dependencies]
brewx-index.workspace = true
brewx-fetch.workspace = true
brewx-state.workspace = true
tar.workspace = true
flate2.workspace = true
zstd.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
