[package]
name = "brewx-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local state management for brewx"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
humantime.workspace = true

[dev-dependencies]
tempfile = "3"
