[package]
name = "stout-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vulnerability scanning and security auditing for installed packages"
readme = "README.md"
repository.workspace = true
keywords = ["security", "vulnerability-scanning", "cve", "audit", "package-security"]
categories = ["development-tools", "cryptography"]

[dependencies]
stout-index.workspace = true
stout-state.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tokio.workspace = true
zstd.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
