[package]
name = "stout-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Brewfile parsing, bundle management, and environment snapshots"
readme = "README.md"
repository.workspace = true
keywords = ["brewfile", "bundle", "declarative", "snapshot", "package-management"]
categories = ["development-tools", "parsing"]

[dependencies]
stout-index.workspace = true
stout-state.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
