[package]
name = "stout-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Download management for stout"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
indicatif.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
serde.workspace = true
futures = "0.3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
