[package]
name = "stout-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async download manager with progress bars, parallel transfers, and SHA256 verification"
readme = "README.md"
repository.workspace = true
keywords = ["download", "async", "http-client", "progress-bar", "cache"]
categories = ["network-programming", "asynchronous"]

[dependencies]
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
indicatif.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
serde.workspace = true
futures = "0.3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
