[package]
name = "stout-mirror"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Offline mirror creation and serving for stout"

[dependencies]
stout-index.workspace = true
stout-resolve.workspace = true
stout-state.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
zstd.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
tar.workspace = true
humansize.workspace = true

# HTTP server for mirror serve
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
