[package]
name = "stout-resolve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dependency graph resolution with topological ordering and circular dependency detection"
readme = "README.md"
repository.workspace = true
keywords = ["dependency-resolution", "topological-sort", "package-manager", "graph", "homebrew"]
categories = ["algorithms", "development-tools"]

[dependencies]
stout-index.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
