[package]
name = "stout-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight local state management for package installations and configuration"
readme = "README.md"
repository.workspace = true
keywords = ["state-management", "configuration", "tracking", "package-manager", "json"]
categories = ["config", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
humantime.workspace = true
stout-index.workspace = true
jiff.workspace = true

[dev-dependencies]
tempfile = "3"
