[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stout-pkg"
version = "0.2.1"
description = "A fast, Rust-based Homebrew-compatible package manager - 10-100x faster than brew"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Neul Labs", email = "hello@neul.com" }
]
keywords = [
    "homebrew",
    "brew",
    "package-manager",
    "macos",
    "linux",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/neul-labs/stout"
Repository = "https://github.com/neul-labs/stout"
Documentation = "https://github.com/neul-labs/stout/blob/main/docs/USAGE.md"
Issues = "https://github.com/neul-labs/stout/issues"

[project.scripts]
stout = "stout_pkg:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stout_pkg"]
